--- a/docshub/src/content/docs/documentation-docker.mdx
+++ b/docshub/src/content/docs/documentation-docker.mdx
@@ -1,4 +1,10 @@
-# DocsHub - Docker
+---
+title: "Docshub with Docker"
+sidebarTitle: "Docshub with Docker"
+description: "How to start the application using Docker"
+category: "Docker"
+publishDate: "2024-09-04"
+---
 
 ## Docker compose
 
