docs: update demo documentation

--- a/docshub/src/content/docs/documentation-cli.mdx
+++ b/docshub/src/content/docs/documentation-cli.mdx
@@ -8,4 +8,5 @@ publishDate: "2024-09-04"
 
 Welcome to the introduction site about Docshub CLI.
 
-### Usage Instructions
+<Alert type={"warning"} message={"Incoming documentation 🚀"}/>
+
