--- a/docshub/src/content/docs/documentation-docshub.mdx
+++ b/docshub/src/content/docs/documentation-docshub.mdx
@@ -6,43 +6,62 @@ category: "Docshub"
 publishDate: "2024-09-04"
 ---
 
-Welcome to the source code section of DocsHub. The application is developed using the Astro Framework and React.
+## DocsHub - Core
 
-### Usage Instructions
+Welcome to the source code section of [DocsHub](https://github.com/atmgrupomaggioli/docshub). The application is built using:
 
-#### Prerequisites
-Ensure that you have **Node.js version 20 or later** installed on your system.
+- [Astro Framework](https://astro.build/).
+- [Tailwind CSS](https://tailwindcss.com/).
+- [Astro Content Collections (MDX)](https://docs.astro.build/en/guides/content-collections/).
+- [React Integration](https://docs.astro.build/es/guides/integrations-guide/react/).
+- [shadcn/ui with Radix](https://ui.shadcn.com/).
 
-#### Locate the project and install dependencies
+## Getting started
 
-```bash
-cd docshub
-```
+**Prerequisites**:
 
-```bash
-npm i
-```
+- [Node.js +20 installed](https://nodejs.org/en/download/)
+- [Astro VSCode Extension (optional)](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode)
+- [Tailwind CSS Intellisense (optional)](https://marketplace.visualstudio.com/items?itemName=bradlc.vscode-tailwindcss)
 
-#### Run Docshub in *dev mode*
-
-Starts local dev server at `localhost:4321`
-
-```bash
-npm run dev
-```
-
-#### Run Docshub in *production mode*
-
-Build your production site to `./dist`
+1. Clone the repository:
 
 ```bash
-npm run build
+$ git clone https://github.com/atmgrupomaggioli/docshub.git
 ```
 
-#### Run Docshub in *preview mode*
-
-Preview your build locally before deploying
+2. Navigate to the project directory:
 
 ```bash
-npm run preview
+$ cd docshub
 ```
+
+3. Install the dependencies:
+
+```bash
+$ npm i
+```
+
+## Commands
+
+### Run the assistant to generate new documents:
+
+This assistant will help us create a new documentation file with the corresponding metadata.
+
+```bash
+$ npm run new:doc
+```
+
+### Document preview
+
+To edit and preview the document, run the application in development mode.
+
+```bash
+$ npm run dev
+```
+
+and open [http://localhost:4321](http://localhost:3000) in your browser.
+
+## License
+
+- [GNU GENERAL PUBLIC LICENSE 3.0](https://github.com/atmgrupomaggioli/docshub/blob/main/LICENSE)
