--- a/docshub/src/pages/inicio.mdx
+++ b/docshub/src/pages/inicio.mdx
@@ -6,8 +6,10 @@ You can see a live demo [here](https://docshub.vercel.app/)
 
 ## Features
 
-- **Code Viewer with Copy Function**: Easily view and copy code snippets directly from the documentation.
+- **Syntax Highlighting with Copy Function**: Easily view and copy code snippets directly from the documentation.
 - **Friendly URLs**: Clean and user-friendly URLs for better navigation and sharing.
 - **Table of Contents**: Automatically generated table of contents for quick and easy access to different sections.
-- **Documentation Search**: Quickly find and navigate to specific entries within the documentation.
 - **Categorized Menu**: Organized menu structure to easily navigate through different categories and sections.
+- **Search Documentation**: Quickly find and navigate to specific entries within the documentation.
+- **Endpoint Documentation**: Ability to document API endpoints for better clarity and usage.
+- **Alerts**: Option to document using an alert component for important messages.
