fix: date & description at syntax doc

--- a/docshub/src/content/docs/syntax-references.mdx
+++ b/docshub/src/content/docs/syntax-references.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Syntax Referente Example Page"
 sidebarTitle: "Syntax References"
-description: "How to start the Astro application"
+description: "Below you will find examples of all the formats you can use in your Markdown documentation"
 category: "References"
-publishDate: "2024-09-04"
+publishDate: "2024-10-03"
 ---
 
 Below you will find examples of all the formats you can use in your Markdown documentation
