docs: fix alert, use new api

--- a/docshub/src/content/docs/documentation-cli.mdx
+++ b/docshub/src/content/docs/documentation-cli.mdx
@@ -8,5 +8,4 @@ publishDate: "2024-09-04"
 
 Welcome to the introduction site about Docshub CLI.
 
-<Alert type={"warning"} message={"Incoming documentation 🚀"}/>
-
+<Alert type="warning">Incoming documentation 🚀</Alert>
