--- a/docshub/src/content/docs/documentation-docker.mdx
+++ b/docshub/src/content/docs/documentation-docker.mdx
@@ -33,7 +33,10 @@ services:
 docker compose up -d --build
 ```
 
-<Alert type={"Info"} message={"Additionally, you have a multi-platform image for linux/amd64 and linux/arm64 with the tag multiplatform"}/>
+<Alert type="Info">
+  Additionally, you have a multi-platform image for linux/amd64 and linux/arm64
+  with the tag multiplatform
+</Alert>
 
 ## Docker run
 
